# flowslice

./: .gitignore  CHANGELOG.md  COMPLEX_DATAFLOW_HANDLING.md  CROSS_FILE_ANALYSIS.md  INDEX.md  INDEX.md.old  KNOWN_ISSUES.md  LICENSE  NEXT_SESSION.md  README.md  RELEASE.md  REMAINING_WORK.md  ROADMAP.md  SESSION_SUMMARY.md  V1_RELEASE_SUMMARY.md  VISUALIZATION_OPTIONS.md  example.py  pyproject.toml
.github/workflows/: lint.yml  publish.yml  tests.yml
archive/naming_research/: AVAILABLE_NAMES.md  NAME_DECISION_FRAMEWORK.md  NAME_FINAL_ANALYSIS.md  NAME_INTUITIVENESS_ANALYSIS.md  NAME_RESEARCH_2025.md  NAME_STYLISTIC_OPTIONS.md  NAME_SUGGESTIONS.md  NAMING_DECISION.md  README.md
archive/poc/: flowslice_poc.py
docs/: README.md
docs/archive/: CONTEXT.md  START_HERE.md
docs/phase0/: FLOWSLICE_PROPOSAL.md  NAMING_FINAL.md  PHASE0_COMPLETE.md  PHASE0_DECISION.md  REFERENCE_SKIPPED_ANALYSIS.md  TOOL_COMPARISON.md
src/flowslice/: __init__.py
src/flowslice/cli/: main.py
src/flowslice/core/: __init__.py  import_resolver.py  models.py  slicer.py
src/flowslice/formatters/: __init__.py  colors.py  dot.py  graph.py  json.py  tree.py
tests/integration/: test_cross_file.py  test_example_integration.py
tests/unit/: test_bug_args_pollution.py  test_bug_args_pollution_real.py  test_cli.py  test_comprehensions.py  test_dag_visualization.py  test_derived_variables.py  test_edge_cases.py  test_formatter.py  test_forward_slice_pollution.py  test_import_resolver.py  test_json_formatter.py  test_models.py  test_slicer.py
